--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <div><a routerLink="/"></a> Exchange App</div>
+  <div><a routerLink="/">Exchange App</a></div>
   <div fxFlex fxLayout fxLayoutAlign="flex-end">
     <ul fxLayout fxLayoutGap="30px" class="navigation-items">
       <li class="navigation-items"><a routerLink="/quote">Exchange Rates</a></li>
