--- a/src/app/components/purchase/purchase.component.html
+++ b/src/app/components/purchase/purchase.component.html
@@ -1,9 +1,9 @@
-<section>
+<section *ngIf="!(loading$ | async)">
   <form fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10px" [formGroup]="form" (ngSubmit)="onSubmit()">
     <p>
       <mat-form-field appearance="standard">
         <mat-label>User Id</mat-label>
-        <input matInput placeholder="User Id" formControlName='userId'>
+        <input type="number" matInput placeholder="User Id" formControlName='userId'>
         <mat-error *ngIf="ctrls.userId.invalid">{{getErrorMessage(ctrls.userId)}}</mat-error>
         <mat-hint>Hint</mat-hint>
       </mat-form-field>
@@ -11,20 +11,24 @@
     <p>
       <mat-form-field appearance="standard">
         <mat-label>Amount</mat-label>
-        <input matInput placeholder="Amount" formControlName='amount'>
+        <input type="number" matInput placeholder="Amount" formControlName='amount'>
         <mat-error *ngIf="ctrls.amount.invalid">{{getErrorMessage(ctrls.amount)}}</mat-error>
         <mat-hint>Hint</mat-hint>
       </mat-form-field>
     </p>
     <p>
       <mat-form-field appearance="standard">
-        <mat-label>Currency</mat-label>
-        <input matInput placeholder="Currency" formControlName='currency'>
+        <mat-select matInput formControlName='currency' placeholder="Currency">
+                    <mat-option *ngFor="let item of rateItems" [value]="item.currency" (onSelectionChange)="itemSelected($event, item)">
+                        {{ item.currency | uppercase }}
+                    </mat-option>
+                </mat-select>
         <mat-error *ngIf="ctrls.currency.invalid">{{getErrorMessage(ctrls.currency)}}</mat-error>
         <mat-hint>Hint</mat-hint>
       </mat-form-field>
     </p>
 
     <button type="submit" mat-raised-button color="primary" [disabled]="form.invalid">Submit</button>
+    <mat-spinner *ngIf="(loading$ | async) || loading"></mat-spinner>
   </form>
 </section>
